0023944: Typo in ShapeCustom_RestrictionParameters leading to wrong approximation results Add test case for this fix